# universal-portfolios

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  MANIFEST.in  Makefile  On-line portfolios.ipynb  README.md  default.mk  modern-portfolio-theory.ipynb  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
examples/: Beating the market with the simple possible predictive metric.ipynb
tests/: conftest.py  test_algos.py  test_result.py
universal/: algo.py  asset_filters.py  result.py  tools.py
universal/algos/: __init__.py  _up_deprecated.py  adahedge.py  anticor.py  bah.py  bcrp.py  best_markowitz.py  best_so_far.py  bnn.py  corn.py  crp.py  cwmr.py  dynamic_crp.py  eg.py  estimators.py  kelly.py  kelly_gaussian.py  kelly_numerical.py  mpt.py  olmar.py  ons.py  pamr.py  rmr.py  rprt.py  single_index_covariance_estimator.py  tco.py  up.py  wmamr.py
universal/algos/ternary/: __init__.py  plotting.py
universal/data/: djia.csv  djia.pkl  msci.csv  msci.pkl  nyse_n.csv  nyse_n.pkl  nyse_o.csv  nyse_o.pkl  sp500.csv  sp500.pkl  tse.csv  tse.pkl
universal/data/jpm_assumptions/: jpm-matrix-eur-2021.xlsx  jpm-matrix-usd-2018.xlsx  jpm-matrix-usd-2019.xlsx  jpm-matrix-usd-2020.xlsx  jpm-matrix-usd-2021.xlsx
universal/tests/: crp_test.py  test_algos.py
