[tool.poetry]
name = "universal-portfolios"
version = "0.4.10"
description = "Collection of algorithms for online portfolio selection"
readme = "README.md"
repository = "https://github.com/Marigold/universal-portfolios"
authors = ["Marigold <mojmir.vinkler@gmail.com>"]
packages = [
    { include = "universal" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.1"
matplotlib = "^3.3.1"
pandas-datareader = "^0.10.0"
statsmodels = "^0.13.2"
scikit-learn = "^1.1.1"
seaborn = "^0.10.1"
requests = "^2.24.0"
plotly = "^4.9.0"
pandas = "^1.1.1"
cvxopt = "^1.3.0"
tqdm = "^4.56.2"
typing-extensions = "^3.10.0"
urllib3 = "^1.26.6"
Pillow = "^9.2.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipdb = "^0.13.3"
line-profiler = "^3.0.2"
ipykernel = "^5.3.4"
jupyter = "^1.0.0"
nbdime = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
