[project]
name = "universal-portfolios"
version = "0.4.15"
description = "Collection of algorithms for online portfolio selection"
readme = "README.md"
authors = [
    {name = "Marigold", email = "mojmir.vinkler@gmail.com"},
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "scipy>=1.8.1",
    "matplotlib>=3.3.1",
    "pandas-datareader>=0.10.0",
    "statsmodels>=0.13.2",
    "scikit-learn>=1.1.1",
    "seaborn>=0.13.2",
    "requests>=2.24.0",
    "plotly>=5.21.0",
    "pandas>=1.1.1",
    "cvxopt>=1.3.0",
    "tqdm>=4.56.2",
    "urllib3>=1.26.6",
    "Pillow>=9.2.0",
    "yfinance>=0.2.31",
    "numpy>=2.0.0",
]

[project.urls]
Repository = "https://github.com/Marigold/universal-portfolios"

[tool.uv]
dev-dependencies = [
    "typing-extensions>=4.0.1",
    "pytest>=6.2.5",
    "ipdb>=0.13.3",
    "line-profiler>=3.0.2",
    "ipykernel>=5.3.4",
    "jupyter>=1.0.0",
    "nbdime>=2.1.0",
    "ruff>=0.1.1",
    "pyright>=1.1.391",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
lint.ignore = ["F403","F405","E731", "E741"]

[tool.hatch.build.targets.wheel]
packages = ["universal"]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/.ipynb_checkpoints",
    ".git",
    "**/.cachedir/",
    "**/.cache/",
]
